[gd_scene load_steps=3 format=3 uid="uid://battle_test_scene"]

[ext_resource type="Script" path="res://scenes/battle_test/battle_test_scene.gd" id="1_script"]
[ext_resource type="Script" path="res://scenes/battle_test/entities/spell_caster.gd" id="2_caster"]

[node name="BattleTestScene" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="BattleArea" type="ColorRect" parent="."]
offset_left = 250.0
offset_top = 60.0
offset_right = 1030.0
offset_bottom = 660.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="SpellCaster" type="Node2D" parent="."]
position = Vector2(300, 360)
script = ExtResource("2_caster")

[node name="CasterVisual" type="Polygon2D" parent="SpellCaster"]
color = Color(0.2, 0.8, 0.4, 1)
polygon = PackedVector2Array(15, 0, -10, -10, -5, 0, -10, 10)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopPanel" type="HBoxContainer" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 1270.0
offset_bottom = 50.0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "法术测试场"

[node name="ScenarioLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 2
text = "测试场景:"

[node name="ScenarioOption" type="OptionButton" parent="UI/TopPanel"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="StartButton" type="Button" parent="UI/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "开始测试"

[node name="StopButton" type="Button" parent="UI/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "停止"

[node name="ResetButton" type="Button" parent="UI/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "重置"

[node name="BackButton" type="Button" parent="UI/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "返回主菜单"

[node name="LeftPanel" type="VBoxContainer" parent="UI"]
offset_left = 10.0
offset_top = 60.0
offset_right = 240.0
offset_bottom = 710.0
theme_override_constants/separation = 10

[node name="SpellListLabel" type="Label" parent="UI/LeftPanel"]
layout_mode = 2
text = "可用法术"

[node name="SpellList" type="ItemList" parent="UI/LeftPanel"]
custom_minimum_size = Vector2(220, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="LoadFromGAButton" type="Button" parent="UI/LeftPanel"]
layout_mode = 2
text = "从GA加载最佳法术"

[node name="SpellEditButtons" type="HBoxContainer" parent="UI/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NewSpellButton" type="Button" parent="UI/LeftPanel"]
layout_mode = 2
text = "新建法术"

[node name="EditSpellButton" type="Button" parent="UI/LeftPanel"]
layout_mode = 2
text = "编辑法术"

[node name="DeleteSpellButton" type="Button" parent="UI/LeftPanel"]
layout_mode = 2
text = "删除法术"

[node name="RightPanel" type="VBoxContainer" parent="UI"]
offset_left = 1040.0
offset_top = 60.0
offset_right = 1270.0
offset_bottom = 710.0
theme_override_constants/separation = 10

[node name="StatsTitle" type="Label" parent="UI/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "实时统计"

[node name="DPSLabel" type="Label" parent="UI/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.2, 0.8, 0.4, 1)
text = "DPS: 0.0"

[node name="HitRateLabel" type="Label" parent="UI/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "命中率: 0%"

[node name="HSeparator" type="HSeparator" parent="UI/RightPanel"]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="UI/RightPanel"]
custom_minimum_size = Vector2(220, 400)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "选择一个法术开始测试..."

[node name="Instructions" type="Label" parent="UI"]
offset_left = 260.0
offset_top = 665.0
offset_right = 1020.0
offset_bottom = 710.0
horizontal_alignment = 1
text = "提示: 选择法术后点击\"开始测试\"自动发射，或在停止状态下点击战斗区域手动发射"
